Pound -- history of user-visible changes. 2025-11-26
See the end of file for copying conditions.

Pound is a continuation of the software originally developed by
Robert Segall at Apsis GmbH, which was officially discontinued
on 2022-09-19.  See the README file for details.

Please send pound bug reports to <gray@gnu.org>

Version 4.18.90 (git)

* Support for Lua

Functions written in Lua can be used to implement complex request
matching conditions, modify requests and/or responses, and implement
new backends.  You will need Lua version 5.3 or newer.  By default,
configure will enable Lua support if it finds the necessary headers
and libraries.  This can be controlled using --disable-lua and
--enable-lua options.

At runtime, Lua sources are loaded using Load statement in the Lua
global section of the configuration file:

   Lua
      Load "impl.lua"
   End

A function returning boolean value can be used as a conditional:

   LuaMatch "myfun" "arg"

Any number of arguments (all of string type) can be provided.
Arguments undergo usual expansions prior to being passed to the
function.

Two more similar statements are added:

   LuaModify   - Applies a Lua function to modify the request (or
                 response).  It can be used in ListenHTTP,
                 ListenHTTPS, Service, Match and Rewrite statements.

   LuaBackend  - Calls a Lua function that implements a backend.

* Detached conditions

Detached condition is a set of conditional statements not associated
with any service, which is assigned a unique symbolic name.  Detached
conditions are defined using the Condition statement in the global
scope of pound configuration file, e.g.:

  Condition "protected"
     Path -beg "/admin"
     ACL -file "internal.acl"
     BasicAuth "htpasswd"
  End

Detached conditions can be invoked using the "Eval" statement, which
is allowed anyplace where the normal conditional is allowed.  Result
of evaluation is cached and reused in subsequent Eval statements